2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -46,7 +47,7 @@
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Works By
               NRFZ</span></a>
         </li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="#connect" class="nav-link scrollto"><i class="bx bxs-group"></i><span>Connect</span></a></li>
         <li><a href="https://nurafianzulkifli.com" class="nav-link scrollto"><i class='bx bx-arrow-back'></i> <span>Return to Current Look</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -59,10 +60,10 @@
       <p><span class="typed" data-typed-items="Hello! My name is, Hello! Nama Saya"></span></p>
       <h1>Nurafian Zulkifli</h1>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/_nrf_z" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/Nrfnzlkf/" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/nrfz._/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/nurafian-zulkifli/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -451,7 +452,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/RDNwcvC.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Bus Replications"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="worksbynrfz/bus-rep.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
@@ -467,7 +468,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/z9t4Cwl.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="EZ-Link Card Redesign"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="worksbynrfz/ezlink-red.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
@@ -512,16 +513,72 @@
     </section><!-- End Portfolio Section -->
 
 
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <!-- ======= Connect Section ======= -->
+    <section id="connect" class="connect">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>Let's Connect!</h2>
+          <p>Have questions? I'm available through these platforms.</p>
         </div>
 
+        <div class="row gy-5">
+
+          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+            <div class="service-item">
+              <div class="img">
+                <img src="assets/img/email.png" class="img-fluid" alt="">
+              </div>
+              <div class="details position-relative">
+                <div class="icon">
+                  <i class="fa-solid fa-envelope-open-text"></i>
+                </div>
+                <a href="mailto:nurafian.bz33@gmail.com?subject=Referral from the website" class="stretched-link">
+                  <h3>Email Address</h3>
+                </a>
+                <p>For non-urgent enquiries</p>
+              </div>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+            <div class="service-item">
+              <div class="img">
+                <img src="assets/img/social.png" class="img-fluid" alt="">
+              </div>
+              <div class="details position-relative">
+                <div class="icon">
+                  <i class="fa-solid fa-circle-user"></i>
+                </div>
+                <!-- <a href="https://linktr.ee/Nrfz" class="stretched-link"> -->
+                <a href="/connect.html" class="stretched-link"></a>
+                <h3>Socials</h3>
+                </a>
+                <p>Follow me through my socials</p>
+              </div>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
+            <div class="service-item">
+              <div class="img">
+                <img src="assets/img/work.png" class="img-fluid" alt="">
+              </div>
+              <div class="details position-relative">
+                <div class="icon">
+                  <i class="fa-brands fa-linkedin"></i>
+                </div>
+                <a href="https://www.linkedin.com/in/nurafian-zulkifli/" class="stretched-link">
+                  <h3>LinkedIn</h3>
+                </a>
+                <p>For Work-related purposes
+                </p>
+              </div>
+            </div>
+          </div><!-- End Service Item -->
+        </div>
       </div>
-    </section><!-- End Contact Section -->
+    </section>
 
   </main><!-- End #main -->
 
@@ -529,10 +586,10 @@
   <footer id="footer">
     <div class="container">
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/_nrf_z" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/Nrfnzlkf/" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/nrfz._/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/nurafian-zulkifli/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>2023</span></strong>. All Rights Reserved.
