--- a/index.html
+++ b/index.html
@@ -551,10 +551,13 @@
                   <i class="fa-solid fa-circle-user"></i>
                 </div>
                 <!-- <a href="https://linktr.ee/Nrfz" class="stretched-link"> -->
-                <a href="/connect.html" class="stretched-link"></a>
                 <h3>Socials</h3>
                 </a>
-                <p>Follow me through my socials</p>
+                <p class="socials">
+                  <a href="https://twitter.com/_nrf_z" class="twitter"><i class="bx bxl-twitter"></i></a>
+                  <a href="https://www.facebook.com/Nrfnzlkf/" class="facebook"><i class="bx bxl-facebook"></i></a>
+                  <a href="https://www.instagram.com/nrfz._/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                </p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -585,12 +588,6 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="social-links">
-        <a href="https://twitter.com/_nrf_z" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/Nrfnzlkf/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/nrfz._/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/nurafian-zulkifli/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
       <div class="copyright">
         &copy; Copyright <strong><span>2023</span></strong>. All Rights Reserved.
       </div>
