2023-04 Feature Update to Version Next

--- a/worksbynrfz/food-rev-flash-app.html
+++ b/worksbynrfz/food-rev-flash-app.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Infographic Design</title>
+  <title>Food Review Compiler/Flashify - a Flashcard App </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,7 +46,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://imgur.com/mq6xG7W.png" alt="">
+                  <img src="https://i.imgur.com/TNq5DJ0.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="https://i.imgur.com/5UygGKb.png" alt="">
                 </div>
 
               </div>
@@ -58,15 +62,17 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Infographic Design</li>
-                <li><strong>Project Year</strong>: 2020</li>
+                <li><strong>Category</strong>: App Mockups</li>
+                <li><strong>Project Year</strong>: 2019 <b>(FRC)</b>, 2020 <b>(FLS)</b></li>
                 <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Infographic Design</h2>
+              <h2>Food Review Compiler/Flashify - a Flashcard App </h2>
               <p>
-                A submission for an assignment to turn my Resume into an Infographic Version.
+                Food Review Compiler App - A Food Review Compiler App Mockup that compiles all the reviews and suggestions by the community, and arranges them by ratings.
+                <br><br>
+                Flashify - A Flashcard App Mockup with gaming features to make learning fun and exciting.
               </p>
             </div>
           </div>
