--- a/worksbynrfz/igra2.html
+++ b/worksbynrfz/igra2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Infographic Design</title>
+  <title>COVID-19 Shopping Habits Infographic</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,7 +46,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://imgur.com/mq6xG7W.png" alt="">
+                  <img src="https://i.imgur.com/TGmCwXt.png" alt="">
                 </div>
 
               </div>
@@ -59,14 +59,14 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Infographic Design</li>
-                <li><strong>Project Year</strong>: 2020</li>
+                <li><strong>Project Year</strong>: 2021</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Infographic Design</h2>
+              <h2>COVID-19 Shopping Habits Infographic</h2>
               <p>
-                A submission for an assignment to turn my Resume into an Infographic Version.
+                A submission for an assignment to produce an actual Infographic, based on a given topic.
               </p>
             </div>
           </div>
