--- a/worksbynrfz/myts-app.html
+++ b/worksbynrfz/myts-app.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Infographic Design</title>
+  <title>MyTransport.SG App Redesign</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,7 +46,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://imgur.com/mq6xG7W.png" alt="">
+                  <img src="https://imgur.com/1lEzi6x.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="https://imgur.com/wrbVSvd.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="https://imgur.com/LzB1Kva.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="https://imgur.com/0mq1EqJ.png" alt="">
                 </div>
 
               </div>
@@ -58,15 +70,15 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Infographic Design</li>
-                <li><strong>Project Year</strong>: 2020</li>
+                <li><strong>Category</strong>: App Mockups/ Concept & Replications</li>
+                <li><strong>Project Year</strong>: 2022</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Infographic Design</h2>
+              <h2>MyTransport.SG App Redesign </h2>
               <p>
-                A submission for an assignment to turn my Resume into an Infographic Version.
+                An app concept of the redesigned MyTransport.SG App, updated with the current design language from the <a href="https://www.samuel-lim.com/wayfinding-ux">new wayfinding system</a>.
               </p>
             </div>
           </div>
