--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>(DEV) Nurafian Z | Home</title>
+  <title>Nurafian Z | Home</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -395,6 +395,22 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-am filter-cr">
+            <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/fxrS76b.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>MyTransport.SG App Redesign </h4>
+                <p>App Mockups/ Concept & Replications</p>
+                <div class="portfolio-links">
+                  <a href="https://i.imgur.com/fxrS76b.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="MyTransport.SG App Redesign"><i class="bi bi-zoom-in"></i></a>
+                  <a href="worksbynrfz/myts-app.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
               <img src="https://i.imgur.com/dl2R8ZY.png" class="img-fluid" alt="">
@@ -469,6 +485,38 @@
                   <a href="https://i.imgur.com/z9t4Cwl.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="EZ-Link Card Redesign"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/ezlink-red.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-id">
+            <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/v63kyPZ.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>COVID-19 Shopping Habits Infographic</h4>
+                <p>Infographic Design</p>
+                <div class="portfolio-links">
+                  <a href="https://i.imgur.com/v63kyPZ.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="COVID-19 Shopping Habits Infographic"><i class="bi bi-zoom-in"></i></a>
+                  <a href="worksbynrfz/igra2.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-am">
+            <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/MKX6hwn.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Food Review Compiler/Flashify - a Flashcard App </h4>
+                <p>App Mockups</p>
+                <div class="portfolio-links">
+                  <a href="https://i.imgur.com/MKX6hwn.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Food Review Compiler/Flashify - a Flashcard App"><i class="bi bi-zoom-in"></i></a>
+                  <a href="worksbynrfz/food-rev-flash-app.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
