2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -354,19 +354,19 @@
 
         <div class="row gy-5">
 
-          <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+          <div class="col-lg-12" data-aos="zoom-in" data-aos-delay="300">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/email.png" class="img-fluid" alt="">
+                <a href="https://nurafianzulkifli.com"><img src="assets/img/social.png" class="img-fluid" alt=""></a>
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="fa-solid fa-envelope-open-text"></i>
+                  <i class="fa-solid fa-address-card"></i>
                 </div>
-                <a href="mailto:nurafian.bz33@gmail.com?subject=Referral from the website" class="stretched-link">
-                  <h3>Email Address</h3>
+                <a href="https://nurafianzulkifli.com" class="stretched-link"></a>
+                <h3>Main Website</h3>
                 </a>
-                <p>For non-urgent enquiries</p>
+                <p>More about me - digital resume</p>
               </div>
             </div>
           </div><!-- End Service Item -->
