2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -68,22 +68,61 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Works By NRFZ</h2>
-          <p>A collection of works I have done over the years. Some are commisioned, some are just passion projects. My
-            huge interests are illustrations, like signages, vehicles and wirerames.</p>
+          <h2>The Problem</h2>
         </div>
 
-        <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-wd">Website Design</li>
-              <li data-filter=".filter-cr">Concepts & Replications</li>
-              <li data-filter=".filter-id">Infographic Design</li>
-              <li data-filter=".filter-am">App Mockups</li>
-              <li data-filter=".filter-ld">Logo Design</li>
-            </ul>
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/snZqYJ3.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Context</h4>
+                <div class="portfolio-links">
+                  <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                </div>
+              </div>
+            </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/snZqYJ3.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Observations</h4>
+                <div class="portfolio-links">
+                  <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/snZqYJ3.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Identity</h4>
+                <div class="portfolio-links">
+                  <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Portfolio Section -->
+
+        <!-- ======= Portfolio Section ======= -->
+    <section id="portfolio" class="portfolio section-bg">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>The Solution</h2>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
