2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
     <nav id="navbar" class="navbar nav-menu">
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Works By
-              NRFZ</span></a>
+        <li><a href="#problem" class="nav-link scrollto"><i class='bx bx-question-mark'></i> <span>The Problem</span></a></li>
+        <li><a href="#solution" class="nav-link scrollto"><i class='bx bx-bulb'></i><span>The Solution</span></a>
         </li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#connect" class="nav-link scrollto"><i class="bx bxs-group"></i><span>Connect</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -64,7 +63,7 @@
   <main id="main">
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <section id="problem" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -79,8 +78,8 @@
               <div class="portfolio-info">
                 <h4>Context</h4>
                 <div class="portfolio-links">
-                  <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                  <a href="the-problem/context.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -93,7 +92,7 @@
                 <h4>Observations</h4>
                 <div class="portfolio-links">
                   <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -106,7 +105,7 @@
                 <h4>Identity</h4>
                 <div class="portfolio-links">
                   <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -118,7 +117,7 @@
     </section><!-- End Portfolio Section -->
 
         <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <section id="solution" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -137,7 +136,7 @@
                   <a href="https://i.imgur.com/dN3zoF8.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="More Replications"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/wayfind.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -153,7 +152,7 @@
                   <a href="https://i.imgur.com/snZqYJ3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MRT Signages Concept/Replications"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -169,7 +168,7 @@
                   <a href="https://i.imgur.com/wXn720I.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="More Replications"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/more-rep.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -185,7 +184,7 @@
                   <a href="https://i.imgur.com/fxrS76b.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MyTransport.SG App Redesign"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/myts-app.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -201,7 +200,7 @@
                   <a href="https://i.imgur.com/dl2R8ZY.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="LTA Bus PIDS Redesign"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/lta-pids.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -217,7 +216,7 @@
                   <a href="https://i.imgur.com/uYfevZF.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MAN A22 Lion Mascot Replication"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/man-a22-masc.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -233,7 +232,7 @@
                   <a href="https://i.imgur.com/oRcN6NQ.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MRT Signages Concept/Replications S1"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/mrt-signage-rep-s1.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -249,7 +248,7 @@
                   <a href="https://i.imgur.com/RDNwcvC.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Bus Replications"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/bus-rep.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -265,7 +264,7 @@
                   <a href="https://i.imgur.com/z9t4Cwl.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="EZ-Link Card Redesign"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/ezlink-red.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -281,7 +280,7 @@
                   <a href="https://i.imgur.com/v63kyPZ.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="COVID-19 Shopping Habits Infographic"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/igra2.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -297,7 +296,7 @@
                   <a href="https://i.imgur.com/MKX6hwn.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Food Review Compiler/Flashify - a Flashcard App"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/food-rev-flash-app.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -313,7 +312,7 @@
                   <a href="https://i.imgur.com/zDfpCEQ.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Infographic Resume"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/igra1.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -329,7 +328,7 @@
                   <a href="https://i.imgur.com/1HQJOAC.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Friends Forever Logo Design"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/ffl.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
