2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/snZqYJ3.png" class="img-fluid" alt="">
+              <img src="assets/img/the-problem/conM.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Context</h4>
                 <div class="portfolio-links">
@@ -87,11 +87,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/snZqYJ3.png" class="img-fluid" alt="">
+              <img src="assets/img/the-problem/obsvM.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Observations</h4>
                 <div class="portfolio-links">
-                  <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox"
+                  <a href="the-problem/observations.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
