--- a/the-problem/context.html
+++ b/the-problem/context.html
@@ -39,36 +39,35 @@
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
-        <div class="row gy-4">
+            <div class="row row-tpts">
 
-          <div class="col-lg-8 col-md-6 portfolio-item">
-            <div class="portfolio-wrap">
+                <h3 class="summary-tit">Context</h3>
+                <p class="summary">
+                  The idea all started with the launch of the new Wayfinding system on the Thomson-East Coast Line
+                  stations. It spots a new design language, where the emphasis was mainly on iconographies, rather than
+                  pure texts. I for one, am a huge fan of this new design albeit it has a few minor flaws. <br><br>
 
-              <a href="https://i.imgur.com/snZqYJ3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><img
-                  src="https://i.imgur.com/snZqYJ3.png" class="img-fluid" alt=""></a>
-            </div>
-          </div>
+                  While the intention sounds good on paper, the execution turned out to be unfavourable (trust me, it's
+                  still not too late to patch up stuffs), as navigating
+                  through the Interchange station with these new system, were in fact, confusing commuters more. These
+                  became evident after the opening of TEL2, where the passenger traffic grew, and people began utilising
+                  the line.<br><br>
+                  <b>Head over to the Observations tab, where you'll see what the problem is all about.</b>
+                </p>
 
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3>"While the intention sounds good on paper, the execution turned out to be unfavourable"</h3>
-            </div>
-            <div class="portfolio-description">
-              <h2>Context</h2>
-              <p>
-                The idea all started with the launch of the new Wayfinding system on the Thomson-East Coast Line
-                stations. It spots a new design language, where the emphasis was mainly on iconographies, rather than
-                pure texts. I for one, am a huge fan of this new design albeit it has a few minor flaws.
+              <div class="col-xl-12 portfolio-item">
+                <a href="../assets/img/prob-sol-img/nws.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/nws.jpg" class="img-fluid-portfolio"
+                    alt=""></a>
                 <br><br>
-                While the intention sounds good on paper, the execution turned out to be unfavourable (trust me, it's
-                still not too late to patch up stuffs), as navigating through the Interchange station with these new
-                system, were in fact, confusing commuters more. These became evident after the opening of TEL2, where
-                the passenger traffic grew, and people began utilising the line.
-              </p>
+                <p class="contextImg-caption text-center">Fig. 1: The New Wayfinding System - in the initial state before
+                  modifications
+                  <br><b>Photo Credits: <a
+                      href="https://eyeondesign.aiga.org/one-designers-quest-to-redesign-singapores-subway-signage/">
+                      Samuel Lim via AIGA - Eye On Design</a></b>
+                </p>
+              </div>
             </div>
-          </div>
-
-        </div>
 
       </div>
     </section><!-- End Portfolio Details Section -->
